<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="facebook_app_id">1112757989078660</string>
    <string name="fb_login_protocol_scheme">fb1112757989078660</string>
    <string name="app_name">Navette</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_auth">Connexion</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter ou s\'inscrire</string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="welcome">Bienvenue!</string>
    <string name="invalid_username">Nom d\'utilisateur invalide</string>
    <string name="invalid_password">Le mot de passe doit contenir >5 caractères</string>
    <string name="login_failed">Connexion échouée</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="login">Se connecter</string>
    <string name="password">Mot de passe</string>
    <string name="hint_password">Mot de passe</string>
    <string name="e_mail">Email</string>
    <string name="email">Email</string>
    <string name="hint_email">Adresse Email</string>
    <string name="register">S\'inscrire</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Nom complet</string>
    <string name="signing">Veuillez patienter…</string>
    <string name="register_failed">Une erreur s\'est produite lors de votre inscription</string>
    <string name="launch_activity">Launch activity</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string-array name="phoneCountryCodes">
        <item>+261</item>
        <item>+33</item>
    </string-array>
    <string-array name="order_steps">
        <item>Car</item>
        <item>Privatize</item>
        <item>Place</item>>
        <item>Go and Back</item>
        <item>Order</item>
        <item>Pay</item>
        <item>End</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="error_database">Erreur de la base de donnée</string>
    <string name="invalid_phone_and_password">Téléphone et/ou mot de passe invalide.</string>
    <string name="error_unauthorized">Non Authorisé</string>
    <string name="error_bad_request">Erreur 400: Mauvaise ou invalide requête</string>
    <string name="error_400">Erreur 400: Mauvaise ou invalide requête</string>
    <string name="error_401">Erreur 401: Unauthorized</string>
    <string name="error_402">Erreur 402: Payment Required</string>
    <string name="error_403">Erreur 403: Forbidden</string>
    <string name="error_404">Erreur 404: Non trouvé</string>
    <string name="error_405">Erreur 405: Methode non permis</string>
    <string name="error_422">Erreur 422: The given data was invalid</string>
    <string name="error_500">Erreur 500: Une erreur s\'est produite.</string>
    <string name="error_not_found">Error 404: Not Found</string>
    <string name="error_unkown">Une erreur s\'est produite. Veuillez réessayer svp!</string>
    <string name="title_maps">Maps</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="title_login">Content de vous revoir!</string>
    <string name="title_register">Merci de nous rejoindre!</string>
    <string name="title_account">Compte</string>
    <string name="title_notification">Notification</string>
    <string name="invalid_json_response">Invalide Reponse JSon</string>
    <string name="permission_denied_explanation">Permission necessaire</string>
    <string name="settings">Paramètres</string>
    <string name="permission_rationale">Permission Rationale</string>
    <string name="ok">OK</string>
    <string name="show_direction">Afficher direction</string>
    <string name="where_you_want_to_go">Où allez vous?</string>
    <string name="title_order">Nouvelle commande</string>
    <string name="title_profile">Profile</string>
    <string name="error_loading_clubs">Erreur de chargement des clubs</string>
    <string name="my_location">Mq localisation</string>
    <string name="logout">Se déconnecter</string>
    <string name="histories">Historiques</string>
    <string name="image">Image</string>
    <string name="close" tools:override="true">Close</string>
    <string name="destination">Destination</string>
    <string name="error_inserting_clubs">Erreur lors de l\'insertion des clubs</string>
    <string name="club">Club</string>
    <string name="car">Voiture</string>
    <string name="car_model">Model du voiture</string>
    <string name="car_place">Nombre de place: %s</string>
    <string name="car_model_name">Model: %s</string>
    <string name="order">Commander</string>
    <string name="label_place_count">Nombre de place à réserver</string>
    <string name="place_count">%d</string>
    <string name="persons_count">%d personnes</string>
    <string name="person_count">%d personne</string>
    <string name="distance">Distance</string>
    <string name="delay">Durée</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="order_now">Réservez maintenant</string>
    <string name="more">Plus</string>
    <string name="booking">Réservation</string>
    <string name="search">Recherche</string>
    <string name="origin">Origine</string>
    <string name="title">Titre</string>
    <string name="subtitle">Sous titre</string>
    <string name="active">Actif</string>
    <string name="internet_error_title">Problème d\'internet.</string>
    <string name="internet_error_subtitle">Connectez-vous à l\'internet et réessayez!</string>
    <string name="internet_error_description">Vous n\'êtes pas connecter au reseau internet.\nVeuillez se connecter à l\'internet pour utiliser le service</string>
    <string name="actualize">Actualiser</string>
    <string name="retours">Retours</string>
    <string name="loader_error_title">Erreur de chargement</string>
    <string name="loader_error_subtitle">Une erreur s\'est produite.</string>
    <string name="loading_notifications">Chargement des notifications</string>
    <string name="loading_direction">Calcul de la distance et de la durée du trajet</string>
    <string name="visit_club">Allez à ce club</string>
    <string name="choose_club">Choisir club</string>
    <string name="next">Suivant</string>
    <string name="ok_and_next">Ok et suivant</string>
    <string name="question_privatize_car">Voulez-vous privatiser la voiture?</string>
    <string name="no">Non</string>
    <string name="yes">Oui</string>
    <string name="pay_now">Payer maintenant</string>
    <string name="validate_now">Valider maintenant</string>
    <string name="question_go_and_back">Aller et retours?</string>
    <string name="book">Réservez</string>
    <string name="book_now">Réservez maintenant</string>
    <string name="amount">Montant</string>
    <string name="order_status">Statut: %s</string>
    <string name="view">Voir</string>
    <string name="checkout">Paiement</string>
    <string name="total_price">Montant total</string>
    <string name="payment_methods">Moyens de paiement</string>
    <string name="cash">Espèce</string>
    <string name="stripe">Carte bancaire</string>
    <string name="paypal">PayPal</string>
    <string name="confirm">Confirmer</string>
    <string name="button_confirm">Confirmer</string>
    <string name="card_number">Numéro de carte</string>
    <string name="save_card_number_for_future_payment">Sauvegarder la carte pour un paiement futur</string>
    <string name="thanks_you_for_purchasing">Votre paiement a été bien réussi.\nMerci d\'avoir utilisé notre service.</string>
    <string name="thanks">Merci</string>
    <string name="title_checkout">Paiement</string>
    <string name="error_invalid_access_token">Cette application n\'est pas configurer sur le serveur.</string>
    <string name="loading_clubs">Chargement des clubs</string>
    <string name="live">Live</string>
    <string name="live_order">Commande</string>
    <string name="driver">Chauffeur</string>
    <string name="description_activity">75% de ces commandes sont terminés.</string>
    <string name="edit">Modifier</string>
    <string name="name">Nom</string>
    <string name="verified">verifé</string>
    <string name="not_verified">Non verifié</string>
    <string name="orders">Mes commandes</string>
    <string name="menu_orders_desc">Voir la liste de vos commandes</string>
    <string name="menu_settings_desc">Gerer les préférences de l\'application</string>
    <string name="menu_histories_desc">Voir vos historiques de trajet</string>
    <string name="title_orders">Commandes</string>
    <string name="title_view_order">Ma commande</string>
    <string name="title_item_order">Commande n°%s</string>
    <string name="subtitle_view_order">Commande n°%s</string>
    <string name="title_view_ride">Course n°%s</string>
    <string name="point_count">%d points</string>
    <string name="loading_orders">Chargement des commandes</string>
    <string name="notification_new_order">Nouvelle commande</string>
    <string name="notification_new_order_desc">Votre commande a été bien activée.</string>
    <string name="title_order_view">Détail d\'une commande</string>
    <string name="title_choose_club">Choisir le club</string>
    <string name="title_empty">Aucun élément trouvé</string>
    <string name="empty_orders">Vous n\'avez pas encore des commandes.</string>
    <string name="empty_notifications">Vous n\'avez pas encore de notification.</string>
    <string name="details">Détails</string>
    <string name="details2">Détails ></string>
    <string name="error">Erreur</string>
    <string name="empty_cars">Aucune voiture trouvée</string>
    <string name="title_choose_car">Séléctionnez la voiture</string>
    <string name="select">Séléctionner</string>
    <string name="trajet">Trajet</string>
    <string name="menu_trajet_desc">Voir le timeline de vos trajets</string>
    <string name="title_steps">Steps</string>
    <string name="empty_steps">Aucune étape trouvée</string>
    <string name="loading_rides">Chargement de vos courses</string>
    <string name="title_rides">Courses</string>
    <string name="title_ride">Course</string>
    <string name="empty_rides">Aucun trajet trouvé</string>
    <string name="rides">Courses</string>
    <string name="menu_rides_desc">Lister tous vos courses</string>
    <string name="menu_about_desc">Voir les informations sur l\'application</string>
    <string name="start_ride">Commencer cet course</string>
    <string name="select_location">Choisissez votre localisation</string>
    <string name="favorites">Favoris</string>
    <string name="select_origin">Origine</string>
    <string name="title_origin">Origine</string>
    <string name="title_retours">Retours</string>
    <string name="update_failed">Modification echouée</string>
    <string name="verify">Vérifier</string>
    <string name="button_verify">Vérifier</string>
    <string name="payment_success">Paiement effectué</string>
    <string name="button_close">Fermer</string>
    <string name="button_live">Live</string>
    <string name="loading_ride_points">Chargements des points GPS</string>
    <string name="button_complete">Terminer</string>
    <string name="ride_complete">Terminer</string>
    <string name="ride_complete_desc">Vous avez passer sur tous les points.\nCliquer sur le bouton suivant\ndès que vous arrivez au club</string>
    <string name="about">A-propos</string>
    <string name="edit_profile">Modifier mon profil</string>
</resources>