<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorAlert">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image"
        app:srcCompat="@drawable/outline_error_outline_24"
        android:tint="@color/colorIcon"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/icon"
        android:layout_toEndOf="@+id/icon"
        android:layout_toStartOf="@id/button"
        android:layout_toLeftOf="@id/button"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/title"/>

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_toRightOf="@+id/icon"
        android:layout_toEndOf="@+id/icon"
        android:layout_toStartOf="@id/button"
        android:layout_toLeftOf="@id/button"
        android:textColor="@color/white"
        android:text="@string/subtitle"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/active"/>

</RelativeLayout>
