<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.navetteclub.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >

        <action
            android:id="@+id/action_navigation_home_to_navigation_order"
            app:destination="@id/navigation_order" />

    </fragment>

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.navetteclub.ui.maps.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_notification"
        android:name="com.navetteclub.ui.notification.NotificationFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_notification">
        <action
            android:id="@+id/action_global_navigation_auth"
            app:destination="@id/navigation_auth" />
        <action
            android:id="@+id/action_navigation_notification_to_navigation_orders"
            app:destination="@id/navigation_orders" />
    </fragment>

    <navigation
        android:id="@+id/navigation_account"
        app:startDestination="@id/profile_fragment">

        <fragment
            android:id="@+id/profile_fragment"
            android:name="com.navetteclub.ui.auth.ProfileFragment"
            android:label="@string/title_profile"
            tools:layout="@layout/fragment_profile">

            <action
                android:id="@+id/action_profile_fragment_to_about_fragment"
                app:destination="@id/about_fragment" />

            <action
                android:id="@+id/action_profile_fragment_to_edit_profile_fragment"
                app:destination="@id/edit_profile_fragment" />

        </fragment>

        <action
            android:id="@+id/action_global_orders_fragment"
            app:destination="@id/orders_fragment" />

        <action
            android:id="@+id/action_global_navigation_auth"
            app:destination="@id/navigation_auth" />

        <action
            android:id="@+id/action_global_navigation_orders"
            app:destination="@id/navigation_orders" />

        <action
            android:id="@+id/action_global_navigation_rides"
            app:destination="@id/navigation_rides" />

        <fragment
            android:id="@+id/edit_profile_fragment"
            android:name="com.navetteclub.ui.auth.EditProfileFragment"
            android:label="@string/edit_profile"
            tools:layout="@layout/fragment_edit_profile" />

        <fragment
            android:id="@+id/about_fragment"
            android:name="com.navetteclub.ui.auth.AboutFragment"
            android:label="@string/about"
            tools:layout="@layout/fragment_about" />

    </navigation>

    <include app:graph="@navigation/auth_navigation" />

    <include app:graph="@navigation/checkout_navigation" />

    <include app:graph="@navigation/order_navigation" />

    <include app:graph="@navigation/orders_navigation" />

    <include app:graph="@navigation/rides_navigation" />

</navigation>
