<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable name="isLoading" type="boolean" />
        <variable name="isUnauthenticated" type="boolean" />
        <variable name="showError" type="boolean" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.navetteclub.ui.main.order.ClubsFragment"
        tools:context="com.navetteclub.ui.MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:title="@string/title_ride"
                app:navigationIcon="@drawable/outline_arrow_back_ios_black_24"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dialog" />

        </com.google.android.material.appbar.AppBarLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:visibility="@{showError||isLoading||isUnauthenticated?View.GONE:View.VISIBLE}">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="LinearLayoutManager"
                tools:listitem="@layout/viewholder_ride_point"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"/>


        </RelativeLayout>

        <com.navetteclub.views.LoadingView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            app:mTitle="@string/loading_ride_points"
            android:visibility="@{isLoading?View.VISIBLE:View.GONE}"/>

        <com.navetteclub.views.LoaderErrorView
            android:id="@+id/loaderErrorView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:visibility="@{showError?View.VISIBLE:View.GONE}"
            app:mTitle="@string/loader_error_title"
            app:mSubtitle="@string/loader_error_subtitle"/>

        <com.navetteclub.views.AuthErrorView
            android:id="@+id/authErrorView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:visibility="@{isUnauthenticated?View.VISIBLE:View.GONE}"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="5dp">

            <Button
                android:id="@+id/close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_close"
                app:layout_constraintStart_toStartOf="parent"
                style="?attr/materialButtonOutlinedStyle"
                android:textColor="@color/colorAccent"
                app:strokeColor="@color/colorAccent" />

            <Button
                android:id="@+id/action_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_ride"
                app:layout_constraintStart_toEndOf="@id/close_button"
                app:layout_constraintEnd_toStartOf="@id/live_button"/>

            <Button
                android:id="@+id/live_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_live"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="?attr/materialButtonOutlinedStyle"
                android:textColor="@color/colorAccent"
                app:strokeColor="@color/colorAccent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
