<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_rides"
    app:startDestination="@id/rides_fragment">

    <fragment
        android:id="@+id/rides_fragment"
        android:name="com.navetteclub.ui.driver.RidesFragment"
        android:label="@string/title_rides"
        tools:layout="@layout/fragment_rides" >

        <action
            android:id="@+id/action_rides_fragment_to_ride_point_fragment"
            app:destination="@id/ride_point_fragment" />

        <action
            android:id="@+id/action_rides_fragment_to_navigation_auth"
            app:destination="@id/navigation_auth" />

    </fragment>

    <fragment
        android:id="@+id/ride_point_fragment"
        android:name="com.navetteclub.ui.driver.RidePointsFragment"
        android:label="@string/title_ride"
        tools:layout="@layout/fragment_ride_points">
        <action
            android:id="@+id/action_ride_point_fragment_to_ride_map_fragment"
            app:destination="@id/ride_map_fragment" />
        <argument
            android:name="ride_id"
            app:argType="long" />
        <deepLink
            android:id="@+id/deepLink3"
            app:uri="http://navetteclub.com/ride/{ride_id}" />
    </fragment>

    <fragment
        android:id="@+id/ride_map_fragment"
        android:name="com.navetteclub.ui.driver.RideMapFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_ride_map">

        <argument
            android:name="ride_id"
            app:argType="long" />
        <deepLink
            android:id="@+id/deepLink4"
            app:uri="http://navetteclub.com/ride/{ride_id}/map" />

    </fragment>

</navigation>