<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable name="isLoading" type="boolean" />
        <variable name="amount" type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/outline_arrow_back_ios_black_24"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/titleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/checkout"
                android:layout_toEndOf="@id/backButton"
                android:textAppearance="?attr/textAppearanceBody1"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/thanks"
            android:textAppearance="?attr/textAppearanceHeadline5"
            app:layout_constraintTop_toBottomOf="@id/relativeLayout"
            app:layout_constraintBottom_toTopOf="@id/bottomView"
            app:layout_constraintVertical_bias="0.5"
            android:gravity="center"/>

        <LinearLayout
            android:id="@+id/bottomView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.navetteclub.views.LoaderErrorView
                android:id="@+id/loaderErrorView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                app:mTitle="@string/thanks_you_for_purchasing"
                app:mSubtitle="@string/image"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>